style. fixed overflow in tables
Nethserver/dev#5884

--- a/root/usr/share/cockpit/nethserver/applications/style.css
+++ b/root/usr/share/cockpit/nethserver/applications/style.css
@@ -398,7 +398,3 @@ li.active>a>span {
     text-decoration: underline;
     cursor: pointer;
 }
-
-.good-table>.responsive {
-    overflow: visible !important;
-}
